--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "name": "\u0141ukasz D\u0105bek",
     "email": "ukidabek@gmail.com"
   },
-  "unity": "2021.1"
+  "unity": "2021.1",
+  "dependencies": {
+    "com.cooki.general": "1.0.0"
+  }
 }
