--- a/Tests/Editor/Utilities.States.Editor.Tests.asmdef
+++ b/Tests/Editor/Utilities.States.Editor.Tests.asmdef
@@ -1,10 +1,14 @@
 {
-    "name": "Utilities.States",
+    "name": "Utilities.States.Editor.Tests",
     "rootNamespace": "",
     "references": [
-        "GUID:4acc7160c80847e48b157260c1e4510a"
+        "GUID:d2e51ec66a21c8a44b71884ec2e2713f",
+        "GUID:0acc523941302664db1f4e527237feb3",
+        "GUID:27619889b8ba8c24980f49ee34dbb44a"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
