--- a/Tests/Editor/Utilities.States.Editor.Tests.asmdef
+++ b/Tests/Editor/Utilities.States.Editor.Tests.asmdef
@@ -3,6 +3,7 @@
     "rootNamespace": "",
     "references": [
         "GUID:d2e51ec66a21c8a44b71884ec2e2713f",
+        "GUID:c415c52800813db42a046fd6b2f459c4",
         "GUID:0acc523941302664db1f4e527237feb3",
         "GUID:27619889b8ba8c24980f49ee34dbb44a"
     ],
