[Assets] Package folder structure reorganized.

--- a/Tests/Editor/Tests Logic/States.TestLogic.asmdef
+++ b/Tests/Editor/Tests Logic/States.TestLogic.asmdef
@@ -1,8 +1,8 @@
 {
-    "name": "Utilities.States.Editor",
+    "name": "States.TestLogic",
     "rootNamespace": "",
     "references": [
-        "GUID:d2e51ec66a21c8a44b71884ec2e2713f"
+        "GUID:e269b547776695b45aff55f83014d8f3"
     ],
     "includePlatforms": [
         "Editor"
