--- a/Editor/Default/States.Default.Editor.asmdef
+++ b/Editor/Default/States.Default.Editor.asmdef
@@ -1,11 +1,8 @@
 {
-    "name": "Utilities.States.Editor.Tests",
+    "name": "States.Default.Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:d2e51ec66a21c8a44b71884ec2e2713f",
-        "GUID:c415c52800813db42a046fd6b2f459c4",
-        "GUID:0acc523941302664db1f4e527237feb3",
-        "GUID:27619889b8ba8c24980f49ee34dbb44a"
+        "GUID:a250a34981696c1469a305d1272302cf"
     ],
     "includePlatforms": [
         "Editor"
