--- a/Runtime/Default/States.Default.asmdef
+++ b/Runtime/Default/States.Default.asmdef
@@ -1,8 +1,8 @@
 {
-    "name": "Utilities.States",
+    "name": "States.Default",
     "rootNamespace": "",
     "references": [
-        "GUID:4acc7160c80847e48b157260c1e4510a"
+        "GUID:e269b547776695b45aff55f83014d8f3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
