--- a/Editor/Core/States.Core.Editor.asmdef
+++ b/Editor/Core/States.Core.Editor.asmdef
@@ -1,13 +1,10 @@
 {
-    "name": "States.Default.Editor",
+    "name": "States.Core.Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:a250a34981696c1469a305d1272302cf",
-        "States.Core"
+        "GUID:e269b547776695b45aff55f83014d8f3"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
