--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "name": "\u0141ukasz D\u0105bek",
     "email": "ukidabek@gmail.com"
   },
-  "unity": "2023.1"
+  "unity": "2023.1",
+  "dependencies": {
+    "com.cooki.utilities": "https://github.com/ukidabek/Utilities.git"
+  }
 }
